third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/control/comment-cr.stderr
TOML parse error at line 1, column 47
  |
1 | comment-cr   = "Carriage return in comment" # 
a=1
  |                                               ^
expected newline, `#`
